--- a/packages/pluggableWidgets/calendar-web/src/ui/Calendar.scss
+++ b/packages/pluggableWidgets/calendar-web/src/ui/Calendar.scss
@@ -41,11 +41,20 @@
     }
 
     .calendar-toolbar {
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
         align-items: center;
-        justify-content: space-between;
-        flex-wrap: wrap;
         padding-bottom: var(--spacing-medium, 10px);
+
+        &-left {
+            justify-self: start;
+        }
+        &-center {
+            justify-self: center;
+        }
+        &-right {
+            justify-self: end;
+        }
     }
 
     .rbc-current-time-indicator {
