--- a/packages/pluggableWidgets/rich-text-web/src/utils/formats/quill-table-better/assets/css/quill-table-better.scss
+++ b/packages/pluggableWidgets/rich-text-web/src/utils/formats/quill-table-better/assets/css/quill-table-better.scss
@@ -269,6 +269,7 @@ $focused-border: 1px solid $focused-border-color;
         align-items: center;
         position: relative;
         padding: 0 4px;
+        cursor: pointer;
 
         &:hover {
             background: $hover-background;
@@ -302,11 +303,16 @@ $focused-border: 1px solid $focused-border-color;
             li {
                 line-height: 30px;
                 list-style: none;
-                padding-left: 10px;
+                padding: 0 10px;
+                cursor: pointer;
 
                 &:hover {
                     background-color: $hover-background;
                 }
+            }
+            .ql-table-header-row {
+                @extend .ql-table-center;
+                justify-content: space-between;
             }
         }
 
@@ -656,6 +662,51 @@ button.ql-table-better {
 
 ol.table-list-container {
     counter-reset: list-0; // reset counter
+}
+.ql-editor th {
+    border: 1px solid #000;
+    padding: 2px 5px;
+    background: #0000000d;
+}
+.ql-table-divider {
+    background: #ccced1;
+    height: 1px;
+    width: 100%;
+}
+.ql-table-switch {
+    position: relative;
+    display: inline-block;
+    width: 28px;
+    height: 16px;
+    .ql-table-switch-inner {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: #ccc;
+        transition: 0.4s;
+        border-radius: 8px;
+    }
+    .ql-table-switch-inner:before {
+        content: "";
+        position: absolute;
+        height: 12px;
+        width: 12px;
+        left: 2px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: #fff;
+        transition: 0.4s;
+        border-radius: 50%;
+    }
+    .ql-table-switch-inner[aria-checked="true"] {
+        background: #2196f3;
+    }
+    .ql-table-switch-inner[aria-checked="true"]:before {
+        transform: translate(12px, -50%);
+    }
 }
 
 // animation
