--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -131,6 +131,24 @@ $root: ".widget-datagrid";
                 align-self: center;
             }
 
+            /* Drag handle */
+            .drag-handle {
+                cursor: grab;
+                pointer-events: auto;
+                position: relative;
+                width: 14px;
+                padding: 0;
+                flex-grow: 0;
+                display: flex;
+                justify-content: center;
+                z-index: 1;
+
+                &:hover {
+                    background-color: var(--brand-primary-50, $brand-light);
+                    color: var(--brand-primary, $brand-primary);
+                }
+            }
+
             &:focus:not(:focus-visible) {
                 outline: none;
             }
