fix: adjust width property for custom content to prevent overflow

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -266,6 +266,7 @@ $root: ".widget-datagrid";
 
         > .td-custom-content {
             flex-grow: 1;
+            min-width: 0;
         }
 
         > .empty-placeholder {
