--- a/packages/pluggableWidgets/date-time-picker-web/src/ui/DateTimePicker.scss
+++ b/packages/pluggableWidgets/date-time-picker-web/src/ui/DateTimePicker.scss
@@ -22,8 +22,7 @@
     &-wrapper {
         align-items: center;
         display: flex;
-        flex: 0 0 75%;
-        max-width: 75%;
+        flex: 1;
         padding: 0 16px;
     }
 
