refactor: standardize use of brandi

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -149,6 +149,10 @@ $root: ".widget-datagrid";
                 }
             }
 
+            .drag-handle + .column-caption {
+                padding-inline-start: 4px;
+            }
+
             &:focus:not(:focus-visible) {
                 outline: none;
             }
