refactor: ensure consistent naming, prop destructuring, update tests

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/_datagrid.scss
@@ -147,6 +147,9 @@ $root: ".widget-datagrid";
                     background-color: var(--brand-primary-50, $brand-light);
                     color: var(--brand-primary, $brand-primary);
                 }
+                :active {
+                    cursor: grabbing;
+                }
             }
 
             .drag-handle + .column-caption {
