--- a/packages/pluggableWidgets/carousel-web/src/ui/Carousel.scss
+++ b/packages/pluggableWidgets/carousel-web/src/ui/Carousel.scss
@@ -1,3 +1,8 @@
+$gray-200: #e3e3e5 !default;
+$spacing-large: 24px !default;
+$focus-outline: 2px solid #264ae5 !default;
+$focus-outline-offset: 2px !default;
+
 .swiper {
     width: 100%;
     height: 100%;
