fix: add comment with explanation of css variables

--- a/packages/pluggableWidgets/carousel-web/src/ui/Carousel.scss
+++ b/packages/pluggableWidgets/carousel-web/src/ui/Carousel.scss
@@ -1,3 +1,4 @@
+// Atlas UI compatible variable naming for data widgets
 $gray-200: #e3e3e5 !default;
 $spacing-large: 24px !default;
 $focus-outline: 2px solid #264ae5 !default;
