--- a/packages/pluggableWidgets/carousel-web/src/ui/Carousel.scss
+++ b/packages/pluggableWidgets/carousel-web/src/ui/Carousel.scss
@@ -33,14 +33,14 @@ $focus-outline-offset: 2px !default;
 .swiper-button-prev {
     --swiper-navigation-size: 24px;
     border-radius: 50%;
-    background-color: var(--gray-200);
-    padding: var(--spacing-large);
+    background-color: var(--gray-200, $gray-200);
+    padding: var(--spacing-large, $spacing-large);
 }
 
 .swiper-button-next:focus,
 .swiper-button-prev:focus {
-    outline: var(--focus-outline);
-    outline-offset: var(--focus-outline-offset);
+    outline: var(--focus-outline, $focus-outline);
+    outline-offset: var(--focus-outline-offset, $focus-outline-offset);
 }
 
 .swiper-slide img {
