feat(slider): update slider and range slider

--- a/packages/pluggableWidgets/slider-web/src/ui/Slider.scss
+++ b/packages/pluggableWidgets/slider-web/src/ui/Slider.scss
@@ -1,5 +1,5 @@
-@use "~rc-slider/assets/index.css";
-@use "~rc-tooltip/assets/bootstrap.css";
+@use "~@rc-component/slider/assets/index.css";
+@use "~@rc-component/tooltip/assets/bootstrap.css";
 
 .widget-slider {
     padding: 4px 8px;
