--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/variables.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/variables.scss
@@ -33,7 +33,7 @@ $spacing-larger: 32px !default;
 $gallery-gap: $spacing-small !default;
 
 // Effects and animations
-$dragging-color-effect: rgba(10, 19, 37, 0.8) !default;
+$dragging-color-effect: $brand-primary !default;
 $skeleton-background: linear-gradient(90deg, rgba(194, 194, 194, 0.2) 0%, #d2d2d2 100%) !default;
 
 // Assets
