refactor: simplify boolean expressions

--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/variables.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/variables.scss
@@ -13,6 +13,7 @@ $brand-light: #e6eaff !default;
 $grid-selected-row-background: $brand-light !default;
 
 // Text and icon colors
+$gray-light: #6c7180 !default;
 $gray-dark: #606671 !default;
 $gray-darker: #3b4251 !default;
 $pagination-caption-color: #0a1325 !default;
