fix: styling cleanup

--- a/packages/pluggableWidgets/slider-web/src/ui/Slider.scss
+++ b/packages/pluggableWidgets/slider-web/src/ui/Slider.scss
@@ -10,6 +10,10 @@
         background-color: initial;
     }
 
+    .rc-slider-handle {
+        opacity: 1;
+    }
+
     &.widget-slider-vertical {
         height: 100%;
     }
