--- a/packages/modules/data-widgets/src/themesource/datawidgets/web/main.scss
+++ b/packages/modules/data-widgets/src/themesource/datawidgets/web/main.scss
@@ -1,5 +1,6 @@
 @import "../../../theme/web/custom-variables";
 @import "variables";
+@import "pagination-bar";
 @import "datagrid";
 @import "datagrid-filters";
 @import "datagrid-dropdown-filter";
