feat: enhance QR/barcode rendering in design preview mode

--- a/packages/pluggableWidgets/barcode-generator-web/src/ui/BarcodeGenerator.scss
+++ b/packages/pluggableWidgets/barcode-generator-web/src/ui/BarcodeGenerator.scss
@@ -2,7 +2,7 @@
 $widget-prefix: "barcode-generator";
 
 .#{$widget-prefix} {
-    display: inline-block;
+    display: block;
     border-radius: var(--card-border-radius);
 
     &--as-card {
