chore: better alignment with checkbox and radio buttons

--- a/packages/pluggableWidgets/checkbox-radio-selection-web/src/ui/CheckboxRadioSelection.scss
+++ b/packages/pluggableWidgets/checkbox-radio-selection-web/src/ui/CheckboxRadioSelection.scss
@@ -28,6 +28,7 @@
     &-item {
         display: flex;
         align-items: center;
+        margin-bottom: 5px;
         input {
             flex: 0 0 16px;
         }
@@ -36,6 +37,7 @@
             font-weight: inherit;
             text-overflow: ellipsis;
             overflow: hidden;
+            margin-bottom: 0;
         }
     }
 
