--- a/packages/pluggableWidgets/barcode-generator-web/src/ui/BarcodeGenerator.scss
+++ b/packages/pluggableWidgets/barcode-generator-web/src/ui/BarcodeGenerator.scss
@@ -12,13 +12,14 @@ $widget-prefix: "barcode-generator";
     }
 }
 
-.qrcode-renderer {
+.qrcode-renderer,
+.barcode-renderer {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 12px;
 
-    svg {
+    > svg {
         max-width: 100%;
         max-height: 100%;
         width: auto;
@@ -30,19 +31,5 @@ $widget-prefix: "barcode-generator";
         font-size: var(--font-size-small);
         color: var(--gray-darker);
         margin: 0;
-    }
-}
-
-.barcode-renderer {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    gap: 12px;
-
-    svg {
-        max-width: 100%;
-        max-height: 100%;
-        width: auto;
-        height: auto;
     }
 }
